--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "nuxt": "^2.15.7",
     "nuxt-microcms-module": "^1.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "fibers": "^5.0.0",
+    "sass": "^1.35.2",
+    "sass-loader": "^10.1.1"
+  }
 }
